--- a/Manipulando DOM/index.html
+++ b/Manipulando DOM/index.html
@@ -85,6 +85,27 @@
             onmouseup="soltar(this)">
             Clicar!
         </div>
+
+        <hr>
+        <!-- Exemplo 10 -->
+        <h4>10. Data e Hora</h4>
+
+        <p>Clique no botão para mostrar a data e hora atual</p>
+
+        <button onclick="mostrarData()">Mostrar data</button>
+
+        <h4 id="data"></h4>
+
+        <hr>
+        <!-- Exemplo 11 -->
+        <h4>11. Contador de Cliques</h4>
+
+        <input type="text" id="display" disabled value="0">
+
+        <p>
+            <button onclick="contarCliques()">Incrementar Contador</button>
+            <button onclick="zerarContador()">Zerar Contador</button>
+        </p>
     </div>
 
 
