--- a/JavaScript básico/index.html
+++ b/JavaScript básico/index.html
@@ -13,7 +13,7 @@
 
         <hr>
         <!-- Exercício 1 -->
-        <h3>1. Escreva um algoritmo que receba 2 valores. Some os valores e mostre o resultado na tela.</h3>
+        <h4>1. Escreva um algoritmo que receba 2 valores. Some os valores e mostre o resultado na tela.</h4>
 
         <input type="text" id="resultado1" disabled value="0" class="display">
 
@@ -32,7 +32,7 @@
 
         <hr>
         <!-- Exercício 2 -->
-        <h3>2. Escreva um algoritmo que receba 3 notas. Calcule a média das notas e mostre na tela.</h3>
+        <h4>2. Escreva um algoritmo que receba 3 notas. Calcule a média das notas e mostre na tela.</h4>
 
         Média: <input type="text" id="resultado2" disabled value="0" class="display">
 
@@ -41,6 +41,24 @@
         <p>Nota 3: <input type="number" id="nota3"></p>
 
         <button onclick="calcularMedia()">Calcular Média</button>
+
+
+
+
+
+
+
+
+
+        <hr>
+        <!-- Exercício 3 -->
+        <h4>3. Escreva um algoritmo que calcule o desconto de 10% sobre o preço de um produto. Apresente o novo preço na tela.</h4>
+
+        R$: <input type="text" id="resultado3" disabled value="0" class="display">
+
+        <p>Valor do produto: R$ <input type="number" id="valorProduto"></p>
+
+        <button onclick="calcularDesconto()">Calcular Desconto</button>
     </div>
 
     <script src="js/script.js"></script>
